Overflow-x + Ex Nav Fix

--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -441,10 +441,14 @@ Body
 
 */
 
+html {
+	overflow-x: hidden;
+}
 
 body {
 	background-color: @primary-light;
 	font-size: 16px;
+	overflow-x: hidden;
 }
 
 .wrap {
@@ -476,6 +480,9 @@ Menu
 	
 }
 
+.expanded-nav-open header.banner.navbar {
+	top: 0;
+}
 
 .navbar, 
 .navbar-default, 
@@ -678,14 +685,13 @@ Hero
 
 .hero-section {
 	overflow: hidden;
-	margin-bottom: 0;
-	
+	margin: 0;
+	width: 100%;
 	.transition();
 	
 	.hero-slide {
 		height: 100%;
 	}
-	
 }
 
 .hero-foreground {
